<resources>
    <string name="app_name">TravelJournal</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="orange_textview">This is an orange TextView</string>
    <string name="green_textview">This is a green TextView</string>
    <string name="blue_textview">This is a blue TextView</string>
    <string name="blue_button">This is Blue Button</string>
    <string name="green_button">This is a Green Button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a New EditText</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="notify_me">Notify Me :)</string>
    <string name="radio_button_1">Radio button 1</string>
    <string name="radio_button_2">Radio button 2</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="i_accept_t_amp_c"><![CDATA[I accept T&C]]></string>
    <string name="hello_android_fundamentals">Hello Android Fundamentals</string>
    <string name="appbar_scrolling_view_behavior">scrolling_view</string>
    <string name="long_text">ScrollView: A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
    <string name="holiday_2017">Holiday 2017</string>
    <string name="islands">Islands</string>
    <string name="fall_2017">Fall 2017</string>
    <string name="rome">Rome</string>
    <string name="summer_2017">Summer 2017</string>
    <string name="london">London</string>
    <string name="winter_2017">Winter 2017</string>
    <string name="paris">Paris</string>
    <string name="spring_2017">Spring 2017</string>
    <string name="san_francisco">San Francisco</string>
    <string name="summer_2018">Summer 2018</string>
    <string name="brasov">Brasov</string>
    <array name="data">
        <item>"Data 1"</item>
        <item>"Data 2"</item>
        <item>"Data 3"</item>
    </array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="start_second_activity">Start Second Activity</string>
    <string name="start_third_activity">Start Third Activity</string>
    <string name="finish_second_activity">Finish Second Activity</string>
    <string name="finish_third_activity">Finish Third Activity</string>
    <string name="textview">TextView</string>
    <string name="manage_trip">Manage Trip</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="save">SAVE</string>
    <string name="price_eur">Price(eur)</string>
    <string name="destination">Destination</string>
    <string name="rating">Rating</string>
</resources>
